syntax = "proto3";
package pb;

import "entities/account.proto";
import "entities/company.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message AccountInactiveRequest {
  optional int32 id = 1;
  bool status = 2;
}

message AccountInactiveResponse {
  int32 code = 1;
  string message = 2;
}